# AuNa-Reduced

./: .clang-format  CMakeCache.txt  CTestConfiguration.ini  README.md
ament_cmake_uninstall_target/: ament_cmake_uninstall_target.cmake
src/car_simulator/: CMakeLists.txt  package.xml
src/car_simulator/car_simulator/: __init__.py  set_parameters_from_file.py
src/car_simulator/config/model_params/: race_car.yaml  vehicle_interface.yaml
src/car_simulator/config/node_params/amcl/: amcl.yaml
src/car_simulator/config/node_params/default_ad_api/: default_ad_api.yaml
src/car_simulator/config/node_params/ekf_localizer/: ekf_localizer.yaml
src/car_simulator/config/node_params/gyro_odometer/: gyro_odometer.yaml
src/car_simulator/config/node_params/lidarslam/: scanmatcher.yaml
src/car_simulator/config/node_params/motion_velocity_smoother/: motion_velocity_smoother.yaml
src/car_simulator/config/node_params/ndt_scan_matcher/: ndt_scan_matcher.yaml
src/car_simulator/config/node_params/obstacle_avoidance_planner/: obstacle_avoidance_planner.yaml
src/car_simulator/config/node_params/obstacle_cruise_planner/: obstacle_cruise_planner.yaml
src/car_simulator/config/node_params/operation_mode_transition_manager/: operation_mode_transition_manager.yaml
src/car_simulator/config/node_params/path_generation/: wall_detection.yaml  wallfollowing.yaml
src/car_simulator/config/node_params/probabilistic_occupancy_grid_map/: probabilistic_occupancy_grid_map.yaml
src/car_simulator/config/node_params/trajectory_follower/: mpc.yaml  pid.yaml  pure_pursuit.yaml
src/car_simulator/config/node_params/vehicle_cmd_gate/: vehicle_cmd_gate.yaml
src/car_simulator/config/node_params/vehicle_velocity_converter/: vehicle_velocity_converter.yaml
src/car_simulator/launch/autoware/: control.launch.py  joy_controller.launch.py  localization.launch.py  perception.launch.py  planning.launch.py  sensing.launch.py  system.launch.py  tf_remap.launch.py  vehicle_interface.launch.py
src/car_simulator/launch/communication/: communication.launch.py
src/car_simulator/launch/lidarslam/: slam.launch.py
src/car_simulator/launch/nav2/: localization.launch.py
src/car_simulator/launch/path_generation/: wallfollowing.launch.py
src/car_simulator/launch/rviz/: rviz.launch.py
src/car_simulator/launch/scenarios/: scenario_robot_racetrack.launch.py  scenario_single_robot_racetrack.launch.py
src/car_simulator/launch/sensing/: laser.launch.py
src/car_simulator/launch/spawn/: spawn_car.launch.py  spawn_robot_state_publisher.launch.py  spawn_single_robot.launch.py
src/car_simulator/models/race_car/: model.urdf
src/car_simulator/rviz/: config.rviz
src/car_simulator/src/autoware/ad_api/: autonomous_availability_manager.cpp  default_pose_initializer.cpp  default_pose_initializer.hpp  external_cmd_selector_conversion.cpp  vehicle_engager.cpp
src/car_simulator/src/autoware/conversions/: path_conversion.cpp
src/car_simulator/src/autoware/rviz_transform/: frame_remap.cpp
src/car_simulator/src/autoware/stub/: objects_provider.cpp
src/car_simulator/src/autoware/vehicle_interface/: vehicle_interface.cpp  vehicle_interface.hpp  vehicle_interface_node.cpp
src/car_simulator/src/laser_to_pointcloud/: laser_to_pointcloud.cpp
src/car_simulator/src/omnet/: omnetRX.cpp  omnetTX.cpp
src/car_simulator/src/path_generation/wallfollowing/: circle.hpp  convex_hull.hpp  dbscan.cpp  dbscan.hpp  fit_walls.hpp  geometric_math.hpp  track.cpp  track.hpp  wall_detection.cpp  wall_detection.hpp  wallfollowing.cpp  wallfollowing.hpp  wallfollowing_node.cpp
src/car_simulator/src/transformations/: tf_copy.cpp  tf_map_transformation.cpp  tf_project.cpp  tf_remap.cpp
src/car_simulator/worlds/: racetrack_decorated.world
src/car_simulator_msgs/: CMakeLists.txt  package.xml
src/car_simulator_msgs/msg/: Track.msg  TrackCurveType.msg
src/car_simulator_rviz_plugins/: CMakeLists.txt  package.xml
src/car_simulator_rviz_plugins/include/track_display/: track_display.hpp
src/car_simulator_rviz_plugins/plugins/: plugin_description.xml
src/car_simulator_rviz_plugins/src/track_display/: track_display.cpp
src/communication/: CMakeLists.txt  package.xml
src/communication/src/: publisher_node.cpp  subscriber_node.cpp
src/vehicle/f110_vehicle_lanuch/vehicle_description/config/: vehicle_info.param.yaml
