<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>car_simulator_rviz_plugins</name>
  <version>1.0.0</version>
  <description>rviz plugin vor visualization opf Track messages</description>
  <maintainer email="mark.emmert@tu-dortmund.de">mark</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <depend>rclcpp</depend>
  
  <depend>rviz_common</depend>
  <depend>rviz_default_plugins</depend>
  <depend>rviz_rendering</depend>
  
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  
  <depend>car_simulator_msgs</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rviz plugin="${prefix}/plugins/plugin_description.xml"/>
  </export>
</package>
