<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>communication</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>autoware_auto_control_msgs</depend>
  <depend>autoware_auto_perception_msgs</depend>
  <depend>autoware_auto_planning_msgs</depend>
  <depend>autoware_auto_vehicle_msgs</depend>
  <depend>tier4_autoware_utils</depend>
  <depend>autoware_ad_api_specs</depend>
  <depend>component_interface_utils</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
